# QMLGuiLib

./: CMakeLists.txt  CMakeLists.txt.orig  COPYING  README.md  TODO  config.h.in  cppcheck.suppr
cmake/: AddInfoFiles.cmake  AndroidManifest.xml.in  CopyFiles.cmake  CreateQtAndroidApk.cmake  Depend_Qt.cmake  Dependencies.cmake  ECMQt4To5Porting.cmake  ExtCache.cmake  GitVersion.cmake  Pack.cmake  PackBundle.cmake.in  PackScript.cmake  QMLScene.cmake  QMLScene.cpp  QMLTestRunner.cmake  QMLTestRunner.cpp  Toolchain_sdk_armv7.cmake  Toolchain_sdk_x86.cmake  Tools.cmake  Translations.cmake  qtdeploy.json.in
doc/: CMakeLists.txt  Doxyfile.in  UseDoxygen.cmake
examples/: CMakeLists.txt  CarouselView.qml  ChartsView.qml  ClockView.qml  ColorsView.qml  CommonIconsModel.qml  CommonIconsView.qml  ConnectorsView.qml  ControlWidgetsView.qml  ControlsPage.qml  ControlsView2.qml  ControlsView3.qml  ControlsView4.qml  ControlsView5.qml  DateTimePickerView.qml  DemoHeader.qml  DialView.qml  DisplayLayoutMenu.qml  DisplayListView.qml  DisplayListViewMenu.qml  DragDropView.qml  DraggedRectangle.qml  ExtendedMenu.qml  ExtendedMenuView.qml  FirmwareTools.cpp  FirmwareTools.hpp  GaugeView.qml  GridMenuView.qml  GridMenuView2.qml  GuiLibDemo.qml  GuiLibDemo_deDE.ts  GuiLibDemo_enEN.ts  GuiLibDemo_frFR.ts  HB1.qml  HB2.qml  HB3.qml  IconLabView.qml  IconsView.qml  IconsView2.qml  InlineListView.qml  (+39 more)
src/: CMakeLists.txt  CPPLINT.cfg  animeo_fr.qph
src/GuiLib/: ActionButton.qml  ActionsMenuHeader.qml  ActionsMenuTabs.qml  AdvancedAngleWidget.qml  AdvancedPositionWidget.qml  AppWindow.qml  BasicInput.qml  BasicPositionWidget.qml  Button.qml  ButtonInput.qml  CMakeLists.txt  Calendar.qml  Carousel.qml  CarouselNav.qml  CheckBox.qml  Clickable.qml  Clock.qml  Colors.qml  ComboBox.qml  Compass.qml  Compass2.qml  CurrentDateTime.qml  CustomDropdown.qml  DataElement.qml  DataTextValue.qml  DateScheduler.qml  DateTimePicker.qml  DebugRectangle.qml  DeviceStatusItem.qml  DiscoveryItem.qml  DraggableScrollBar.qml  Dropdown.qml  ElevationWidget.qml  ExtendedMenuHeader.qml  Extensible.qml  FloatingButton.qml  FocusArea.qml  FontAwesome.js  FontAwesomeBrand.js  FontAwesomeRegular.js  (+93 more)
src/GuiLib/fonts/: fontAwesomeVersion
tests/: AvailablePorts.qml  CMakeLists.txt  Connection.qml  ex_MainMenu.qml  menu1.qml  menu2.qml  qmldir  tst_Controls.qml  tst_MainMenu.qml  tst_SubMenu.qml
